dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: bidmcdigitalpsychiatry/lamp-dashboard:2021.2.12
          ports:
            - containerPort: 80
            - containerPort: 443
          livenessProbe:
            httpGet:
              path: /
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  type: ClusterIP
  selector:
    app: dashboard
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
